[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.6.1"
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.9", optional = true }
[workspace]
members = [
    "board_plugin"
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
