[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
serde = "1.0"
rand = "0.8"
colored = { version = "2.0", optional = true } 
bevy-inspector-egui = { version = "0.9", optional = true }

# Engine
[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]
